# senior_project_docker

./: .dockerignore  .gitignore  1.23  MUJOCO_LOG.TXT  README.md  requirements.txt
src/stretch_ros2/senior_project/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/stretch_ros2/senior_project/config/: robot.rviz  scene.xml
src/stretch_ros2/senior_project/launch/: RL.launch.py  launch_sim.launch.py  sam3.launch.py  sam3_navigation.launch.py  sam3_navigation_parallel.launch.py
src/stretch_ros2/senior_project/map/: map.xml
src/stretch_ros2/senior_project/parallel_training/sim_0/: replay_buffer.npz
src/stretch_ros2/senior_project/scripts/: hard_reset.sh  reward_monitor.py  sam3_setup.sh
src/stretch_ros2/senior_project/scripts/runs/stretch_hardreset/: events.out.tfevents.1765508704.sbrainard.1468242.0  events.out.tfevents.1765508775.sbrainard.1477918.0  events.out.tfevents.1765508845.sbrainard.1487445.0  events.out.tfevents.1765508916.sbrainard.1496834.0  events.out.tfevents.1765508986.sbrainard.1505995.0  events.out.tfevents.1765509056.sbrainard.1515269.0  events.out.tfevents.1765509271.sbrainard.1542628.0  events.out.tfevents.1765509317.sbrainard.1548151.0  (+613 more)
src/stretch_ros2/senior_project/senior_project/: cam_calibrate.py  camera_calib.npz  federated_sync.py  learner_node.py  merge_checkpoints.py  mono_depth_server.py  parallel_runner.py  sam3_camtest.py  sam3_depth_node.py  sam3_distance_test.py  sam3_goal_generator.py  sam3_room_scanner.py  sam3_ros_node.py  sam3_server.py  webcam_publisher.py
src/stretch_ros2/senior_project/src/: stretch2.rviz
(+168 files in other folders)
